// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KModal matches snapshot 1`] = `undefined`;

exports[`KModal renders custom button text & appearance 1`] = `
<div aria-hidden="false" role="dialog" class="k-modal">
  <div class="modal-backdrop">
    <div class="modal-dialog">
      <div class="modal-content">
        <div class="modal-header">Modal Title</div>
        <!---->
        <div class="modal-body">Modal Content</div>
        <div class="modal-footer"><button type="button" class="k-button outline-primary">
            click to continue
          </button> <button type="button" class="k-button outline-danger">
            click to cancel
          </button></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KModal renders proper content when using props 1`] = `
<div aria-hidden="false" role="dialog" class="k-modal">
  <div class="modal-backdrop">
    <div class="modal-dialog">
      <div class="modal-content">
        <div class="modal-header">Sweet prop title</div>
        <!---->
        <div class="modal-body">Sweet prop content</div>
        <div class="modal-footer"><button type="button" class="k-button primary">
            Proceed
          </button> <button type="button" class="k-button secondary">
            Cancel
          </button></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`KModal renders proper content when using slots 1`] = `
<div aria-hidden="false" role="dialog" class="k-modal">
  <div class="modal-backdrop">
    <div class="modal-dialog">
      <div class="modal-content">
        <div class="modal-header">
          <div>This is some header text</div>
        </div>
        <!---->
        <div class="modal-body">
          <div>This is some body text</div>
        </div>
        <div class="modal-footer">
          <div>This is some footer text</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
